# sklearn-smithy

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  _typos.toml  index.html  mightyestimator.py  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: deploy-docs.yaml  pull-request.yaml
.streamlit/: config.toml
contribute/: index.html
docs/: contribute.md  index.md  installation.md  user-guide.md  why.md
docs/css/: custom.css  termynal.css
docs/js/: custom.js
installation/: index.html
js/: termynal.js
requirements/: test.txt
search/: search_index.json
skboilerplate/: __init__.py  __main__.py  template.py.jinja
sksmithy/: __init__.py  __main__.py  _arguments.py  _callbacks.py  _logger.py  _models.py  _parsers.py  _prompts.py  _utils.py  app.py  cli.py  template.py.jinja
sksmithy/_static/: description.md  template.py.jinja  tui.tcss
sksmithy/tui/: __init__.py  __main__.py  _components.py  _tui.py  _validators.py  tui.py
tests/: conftest.py  test_app.py  test_cli.py  test_parsers.py  test_render.py  test_tui.py
user-guide/: index.html
why/: index.html
