[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sklearn-smithy"
version = "0.0.7"

license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Francesco Bruzzesi"}]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
    "result>=0.16.0",
    "ruff>=0.4.0",
    "typing-extensions>=4.4.0; python_version < '3.11'",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
streamlit = ["streamlit>=1.34.0"]

[project.scripts]
smith = "sksmithy.__main__:app"

[tool.hatch.build.targets.sdist]
only-include = ["sksmithy"]

[tool.hatch.build.targets.wheel]
packages = ["sksmithy"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "PLR0913",
    "FBT001",
    "FBT002",
    "S603",
    "S607",
    "D100",
    "D104",
    "D400",
    ]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "N802", "N806", "PD901", "PT006", "PT007", "PLR0913", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.coverage.run]
source = ["sksmithy/"]
