[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sklearn-smithy"
version = "0.2.0"
description = "Toolkit to forge scikit-learn compatible estimators."
requires-python = ">=3.10"

license = {file = "LICENSE"}
readme = "README.md"

authors = [
    {name = "Francesco Bruzzesi"}
]

keywords = [
    "python",
    "cli",
    "webui",
    "tui",
    "data-science",
    "machine-learning",
    "scikit-learn"
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
    "result>=0.16.0",
    "ruff>=0.4.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/FBruzzesi/sklearn-smithy"
Issues = "https://github.com/FBruzzesi/sklearn-smithy/issues"
Documentation = "https://fbruzzesi.github.io/sklearn-smithy"
Website = "https://sklearn-smithy.streamlit.app/"


[project.optional-dependencies]
streamlit = ["streamlit>=1.34.0"]
textual = ["textual[syntax]>=0.65.0"]

all = [
    "streamlit>=1.34.0",
    "textual>=0.65.0",
]

[project.scripts]
smith = "sksmithy.__main__:cli"

[tool.hatch.build.targets.sdist]
only-include = ["sksmithy"]

[tool.hatch.build.targets.wheel]
packages = ["sksmithy"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "PLR0913",
    "FBT001",
    "FBT002",
    "S603",
    "S607",
    "D100",
    "D104",
    "D400",
    ]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D103","S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.coverage.run]
source = ["sksmithy/"]
omit = [
    "sksmithy/__main__.py",
    "sksmithy/_arguments.py",
    "sksmithy/_logger.py",
    "sksmithy/_prompts.py",
    "sksmithy/tui/__init__.py",
]